--- a/docker/maxquant/Dockerfile
+++ b/docker/maxquant/Dockerfile
@@ -1,21 +1,17 @@
 FROM --platform=amd64 mambaorg/micromamba:1.5.8-noble
 
-WORKDIR /home/mambauser
+COPY environment.yml .
+COPY maxquant.zip .
 
-COPY --chown=mambauser:mambauser environment.yml .
-COPY ./maxquant.zip ./maxquant.zip
-
-# install and setup of micromamba and openms
-USER mambauser
-ENV HOME=/home/mambauser
+# install and setup of micromamba
+USER root
+ENV HOME=/root
 ENV ENV_NAME=maxquant
 
 RUN echo 'show_banner: false' > ~/.mambarc
 
 RUN micromamba env create -y -f environment.yml \
     && micromamba clean --all --yes
-
-USER root
 
 RUN  apt-get update -y \
     && apt-get install -y unzip \
