using psm_utils and ms2rescore_rs dev versions

--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,5 +1,5 @@
 # AMD64 needed explicitly on ARM as some sofwtare is only available in AMD64
-FROM --platform=amd64 mambaorg/micromamba:1.5.8-noble
+FROM --platform=amd64 mambaorg/micromamba:2.1.0-ubuntu22.04
 
 WORKDIR /home/mambauser
 # Copy backend and environment.yml
@@ -9,17 +9,19 @@ COPY --chown=mambauser:mambauser requirements.txt .
 USER root
 
 RUN apt update \
-    && apt install -y libglib2.0-0 \
+    && apt install -y libglib2.0-0 build-essential cmake \
     && apt clean
 
 USER mambauser
-ENV HOME /home/mambauser
+ENV HOME=/home/mambauser
 ENV ENV_NAME=medbioinforub-ident-comparison
 
 RUN echo 'show_banner: false' > ~/.mambarc
 
 RUN micromamba env create -y -f environment.yml \
     && micromamba clean --all --yes
+
+# TODO: remove build-essential
 
 USER root
 # First is necessary for base_image to actvate the conda environment second is entrypoint
