--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -17,8 +17,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      attestations: write
-      id-token: write
 
     steps:
       - name: Checkout repository
@@ -28,8 +26,8 @@ jobs:
         uses: docker/login-action@v3
         with:
             registry: ${{ env.REGISTRY }}
-            username: medbioinf
-            password: ${{ secrets.GHCR_BUILD_TOKEN }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
