adding label for title and description

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -50,9 +50,11 @@ jobs:
           #push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: |
-            ${{ steps.meta.outputs.labels }}
+            org.opencontainers.image.title=pipeline-of-identification
             org.opencontainers.image.description=Tools used in the pipeline-of-identification
             org.opencontainers.image.version=latest
+            org.opencontainers.image.url=${{ github.event.repository.html_url }}
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
           platforms: linux/amd64
       
       - name: Generate artifact attestation
