container images as labels in config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,135 @@
-workflow.output.mode = "copy"
+// Global default params, used in configs
+params {
+  // parameters set by the command line
+  raw_files = ''
+  mzml_files = ''    // may contain globs
+  fasta = ''
+  fasta_target_decoy = ''
+  precursor_tol_ppm = 10
+  fragment_tol_da = 0.02
+  is_timstof = false
+  entrapment_fold = 0
+  use_only_rank1_psms = true
+
+  // keep the (converted) mzML files
+  keep_mzmls = true
+
+  // should the search engines be executed?
+  execute_comet = true
+  execute_maxquant = true
+  execute_msamanda = true
+  execute_msfragger = true
+  execute_msgfplus = true
+  execute_sage = true
+  execute_xtandem = true
+
+  // default parameter files
+  outdir = './'
+  comet_params_file = "${baseDir}/config/comet.params"
+  maxquant_params_file = "${baseDir}/config/mqpar.xml"
+  msamanda_config_file = "${baseDir}/config/msamanda_settings.xml"
+  msfragger_config_file = "${baseDir}/config/closed_fragger.params"
+  msgfplus_params_file = "${baseDir}/config/MSGFPlus_Params.txt"
+  sage_config_file = "${baseDir}/config/sage_config.json"
+  xtandem_config_file = "${baseDir}/config/xtandem_input.xml"  
+}
+
+manifest {
+  name = 'mpc-bioinformatics/McQuaC'
+  contributors = [
+    [
+      name: 'Julian Uszkoreit',
+      affiliation: 'Ruhr University Bochum, Medical Bioinformatics',
+      github: '@julianu',
+      contribution: ['author', 'maintainer', 'contributor'],
+      orcid: '0000-0001-7522-4007',
+    ],
+    [
+      name: 'Dirk Winkelhardt',
+      affiliation: 'Ruhr University Bochum, Medical Bioinformatics',
+      github: '@di-hardt',
+      contribution: ['author', 'maintainer', 'contributor'],
+      orcid: '0000-0001-8770-2221',
+    ],
+  ]
+  homePage = 'https://github.com/medbioinf/pipeline-of-identification'
+  description = """A pipeline for the identification of peptides from mass spectrometry data, integrating multiple search engines and post-processing tools."""
+  mainScript = 'main.nf'
+  defaultBranch = 'main'
+  nextflowVersion = '!>=24.10.6'
+  version = '0.1.0'
+}
 
 profiles {
-    docker {
-        docker.enabled = true
-        docker.runOptions = "--user=root"
-        docker.fixOwnership = true
+  docker {
+    docker.enabled = true
+    docker.runOptions = "--user=root"
+    docker.fixOwnership = true
+
+    process {
+      withLabel: python_image {
+        container = 'ghcr.io/medbioinf/pipeline-of-identification:latest'
+      }
+
+      withLabel: comet_image {
+        container = 'quay.io/medbioinf/comet-ms:v2024.01.0'
+      }
+
+      withLabel: maxquant_image {
+        container = 'quay.io/medbioinf/maxquant:2.6.3.0'
+      }
+
+      withLabel: msamanda_image {
+        container = 'quay.io/medbioinf/msamanda:3.0.22.071'
+      }
+
+      withLabel: msfragger_image {
+        container = 'medbioinf/msfragger'
+      }
+
+      withLabel: msgfplus_image {
+        container = 'quay.io/medbioinf/msgfplus:v2024.03.26'
+      }
+
+      withLabel: mzidmerger_image {
+        container = 'quay.io/medbioinf/mzid-merger:1.4.26'
+      }
+
+      withLabel: sage_image {
+        container = 'quay.io/medbioinf/sage:v0.15.0-beta.1'
+      }
+
+      withLabel: xtandem_image {
+        container = 'quay.io/medbioinf/xtandem:2017.2.1.4'
+      }
+
+      withLabel: percolator_image {
+        container = 'ghcr.io/percolator/percolator:branch-3-08'
+      }
+
+      withLabel: msconvert_image {
+        container = 'proteowizard/pwiz-skyline-i-agree-to-the-vendor-licenses:3.0.25073-842baef'
+      }
+
+      withLabel: tdf2mzml_image {
+        container = 'quay.io/medbioinf/tdf2mzml:0.4'
+      }
+
+      withLabel: oktoberfest_image {
+        container = 'medbioinf/oktoberfest'
+      }
+
+      withLabel: openms_image {
+        container = 'quay.io/medbioinf/openms:3.4.1'
+      }
+
+      withLabel: fdrbench_image {
+        container = 'quay.io/medbioinf/fdrbench-nightly:146f77'
+      }
     }
+  }
+}
+
+plugins {
+  id 'nf-schema@2.5.0'
 }
