moving parameters from main and comet to config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,36 +1,39 @@
 // Global default params, used in configs
 params {
-  // parameters set by the command line
-  raw_files = ''
-  mzml_files = ''    // may contain globs
+  // input / output parameters
+  outdir = './'
+  raw_files = './msms-files/*.raw'
+  mzml_files = ''
   fasta = ''
   fasta_target_decoy = ''
+  entrapment_fold = 0
+  keep_mzmls = true
+
+  // search specific parameters
   precursor_tol_ppm = 10
   fragment_tol_da = 0.02
   is_timstof = false
-  entrapment_fold = 0
   use_only_rank1_psms = true
 
-  // keep the (converted) mzML files
-  keep_mzmls = true
-
-  // should the search engines be executed?
   execute_comet = true
-  execute_maxquant = true
-  execute_msamanda = true
-  execute_msfragger = true
-  execute_msgfplus = true
-  execute_sage = true
-  execute_xtandem = true
-
-  // default parameter files
-  outdir = './'
   comet_params_file = "${baseDir}/config/comet.params"
+  comet_threads = 16
+  comet_mem = '8.GB'
+  comet_psm_id_pattern = '(.*)'
+  comet_spectrum_id_pattern = '.*scan=(\\d+)$'
+  comet_scan_id_pattern = '^(?P<scan_id>\\d+)$'
+
+  execute_maxquant = true
   maxquant_params_file = "${baseDir}/config/mqpar.xml"
+  execute_msamanda = true
   msamanda_config_file = "${baseDir}/config/msamanda_settings.xml"
+  execute_msfragger = true
   msfragger_config_file = "${baseDir}/config/closed_fragger.params"
+  execute_msgfplus = true
   msgfplus_params_file = "${baseDir}/config/MSGFPlus_Params.txt"
+  execute_sage = true
   sage_config_file = "${baseDir}/config/sage_config.json"
+  execute_xtandem = true
   xtandem_config_file = "${baseDir}/config/xtandem_input.xml"  
 }
 
