maxquant params to config and schema

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,14 +25,24 @@ params {
 
   execute_maxquant = true
   maxquant_params_file = "${baseDir}/config/mqpar.xml"
+  maxquant_threads = 4
+  maxquant_mem = "32.GB"
+  maxquant_psm_id_pattern = ""
+  maxquant_spectrum_id_pattern = ""
+  maxquant_scan_id_pattern = ""
+
   execute_msamanda = true
   msamanda_config_file = "${baseDir}/config/msamanda_settings.xml"
+
   execute_msfragger = true
   msfragger_config_file = "${baseDir}/config/closed_fragger.params"
+
   execute_msgfplus = true
   msgfplus_params_file = "${baseDir}/config/MSGFPlus_Params.txt"
+
   execute_sage = true
   sage_config_file = "${baseDir}/config/sage_config.json"
+
   execute_xtandem = true
   xtandem_config_file = "${baseDir}/config/xtandem_input.xml"  
 }
