--- a/nextflow.config
+++ b/nextflow.config
@@ -8,12 +8,17 @@ params {
   fasta_target_decoy = ''
   entrapment_fold = 0
   keep_mzmls = true
+  tdf2mzml_threads = 8
+  decoy_database_threads = 4
+  fdrbench_mem_gb = 16
 
   // search specific parameters
   precursor_tol_ppm = 10
   fragment_tol_da = 0.02
   is_timstof = false
   use_only_rank1_psms = true
+  convert_psm_tsv_mem = '60.GB'
+  enhance_psm_tsv_mem = '8.GB'
 
   execute_comet = true
   comet_params_file = "${baseDir}/config/comet.params"
@@ -33,18 +38,71 @@ params {
 
   execute_msamanda = true
   msamanda_config_file = "${baseDir}/config/msamanda_settings.xml"
+  msamanda_threads = 16
+  msamanda_mem = '64.GB'
+  msamanda_psm_id_pattern = '(.*)'
+  msamanda_spectrum_id_pattern = '(.*)'
+  msamanda_scan_id_pattern = '.*scan=(?P<scan_id>\\d+)$'
 
   execute_msfragger = true
   msfragger_config_file = "${baseDir}/config/closed_fragger.params"
+  msfragger_threads = 16
+  msfragger_mem_gb = 16
+  msfragger_db_split = 0
+  msfragger_calibrate = 2
+  msfragger_psm_id_pattern = '(.*)'
+  msfragger_spectrum_id_pattern = '(.*)'
+  msfragger_scan_id_pattern = '.*scan=(?P<scan_id>\\d+)$'
 
   execute_msgfplus = true
   msgfplus_params_file = "${baseDir}/config/MSGFPlus_Params.txt"
+  msgfplus_threads = 6
+  msgfplus_mem_gb = 16
+  msgfplus_tasks = 0
+  msgfplus_instrument = 1 // 0: Low-res LCQ/LTQ, 1: Orbitrap/FTICR/Lumos, 2: TOF, 3: Q-Exactive
+  msgfplus_split_input = 10000     // split input mzMLs into chunks of this size, 0 to disable
+  msgfplus_merge_mem_gb = 16       // memory for merging PSMs, used in merge_psms process
+  msgfplus_split_fasta = 0         // split the fasta into this many chunks, 0 to disable
+  msgfplus_psm_id_pattern = '(.*)'
+  msgfplus_spectrum_id_pattern = '(.*)'
+  msgfplus_scan_id_pattern = '.*scan=(?P<scan_id>\\d+)$'
 
   execute_sage = true
   sage_config_file = "${baseDir}/config/sage_config.json"
+  sage_threads = 16
+  sage_mem = '128.GB'
+  sage_prefilter = 'false'
+  sage_prefilter_chunk_size = 0
+  sage_psm_id_pattern = '(.*)'
+  sage_spectrum_id_pattern = '(.*)'
+  sage_scan_id_pattern = '.*scan=(?P<scan_id>\\d+)$'
 
   execute_xtandem = true
   xtandem_config_file = "${baseDir}/config/xtandem_input.xml"  
+  xtandem_threads = 16
+  xtandem_mem = '128.GB'
+  xtandem_psm_id_pattern = '(.*)'
+  xtandem_spectrum_id_pattern = '(.*)'
+  xtandem_scan_id_pattern = '.*scan=(?P<scan_id>\\d+)$'
+
+  // parameters for ms2rescore
+  ms2rescore_threads = 4
+  ms2rescore_mem = '64.GB'
+  ms2rescore_model = 'HCD'
+  ms2rescore_chunk_size = 100000
+  ms2pip_model_dir = './ms2pip-model'
+
+  // parameters for oktoberfest
+  oktoberfest_memory = '64.GB'
+  oktoberfest_to_pin_memory = '4.GB'
+  oktoberfest_intensity_model = 'Prosit_2020_intensity_HCD'
+  oktoberfest_irt_model = 'Prosit_2019_irt'
+  oktoberfest_forks = 1 // have some mercy with the koina servers
+
+  // number of threads used by percolator
+  percolator_threads = 4
+  percolator_mem = '4.GB'
+
 }
 
 manifest {
